# drivers_peripheral

./: .gitignore  1.diff  2.diff  CODEOWNERS  LICENSE  OAT.xml  README.en.md  README.md  README_zh.md  RELEASE_NOTES  audio.diff:Zone.Identifier  clearplay.tgz  lq-20251204.txt
audio/: BUILD.gn  README.md  README_zh.md  audio.gni  bundle.json  hisysevent.yaml
audio/audio_dfx/: BUILD.gn
audio/config/: alsa_adapter.json  alsa_paths.json  audio_adapter.json  audio_adapter_config.json  audio_config.gni  audio_paths.json
audio/effect/: BUILD.gn
audio/hdi_service/: BUILD.gn
audio/sample/: BUILD.gn  framework_capture.c  framework_common.h  framework_event.c  framework_render.c
audio/supportlibs/: BUILD.gn
audio/test/: BUILD.gn
audio/utils/: BUILD.gn
base/: BUILD.gn  buffer_handle.h  bundle.json  hdf_peripheral.cfg  hdf_peripheral.rc  hdf_trace.h
base/etc/: audio_hifi_watchdog.para  audio_hifi_watchdog.para.dac
battery/: BUILD.gn  README.md  README_zh.md  battery.gni  bundle.json
battery/charger/: BUILD.gn
battery/utils/: battery_xcollie.cpp
camera/: AGENTS.md  BUILD.gn  README_zh.md  bundle.json  camera.gni  hisysevent.yaml
camera/hal/: BUILD.gn  BUILD.gn.v4l2  Makefile  Makefile.param  build.sh  camera.gni
camera/hal_c/: BUILD.gn
camera/hdi_service/: BUILD.gn
camera/interfaces/: README_zh.md
camera/test/: BUILD.gn
camera/usb_hal/: camera_usb.gni
codec/: BUILD.gn  README.md  README_zh.md  bundle.json  codec.gni
codec/hal/: BUILD.gn
codec/hdi_service/: BUILD.gn
codec/image/: BUILD.gn
codec/test/: BUILD.gn
codec/zcodec/: BUILD.gn  hdi_z_factory_driver.cpp  hdi_z_factory_service.cpp  hdi_z_factory_service.h
display/: BUILD.gn  README.md  bundle.json  display_config.gni
display/buffer/: BUILD.gn
display/composer/: BUILD.gn
display/hal/: BUILD.gn  disp_common.h  disp_hal.c  disp_hal.h
display/test/: BUILD.gn
distributed_audio/: BUILD.gn  bundle.json  distributedaudio.gni
input/: BUILD.gn  README.md  README_zh.md  bundle.json  input.gni
input/ddk_service/: BUILD.gn
input/hal/: BUILD.gn
input/hdi_service/: BUILD.gn  input_interfaces_driver.cpp  input_interfaces_impl.cpp  input_interfaces_impl.h
input/libinput/: BUILD.gn
input/test/: BUILD.gn
input/udriver/: BUILD.gn  hotplug.c
input/uinput/: BUILD.gn
intelligent_voice/: BUILD.gn  README_zh.md  bundle.json  intelligent_voice.gni
intelligent_voice/interfaces/: i_engine.h  i_trigger.h
intelligent_voice/passthrough/: BUILD.gn  intell_voice_engine_manager.cpp  intell_voice_engine_stub.cpp  intell_voice_trigger_manager.cpp  intell_voice_trigger_stub.cpp
intelligent_voice/utils/: intell_voice_log.h  memory_guard.cpp  memory_guard.h  scope_guard.h
light/: BUILD.gn  README.md  bundle.json  light.gni
light/hal/: BUILD.gn
light/hdi_impl/: BUILD.gn  light_interface_impl.cpp  light_interface_impl.h
light/hdi_service/: BUILD.gn  light_if_driver.cpp  light_if_service.cpp  light_if_service.h  light_interface_driver.cpp  light_interface_impl.cpp  light_interface_impl.h
light/test/: BUILD.gn
low_power_player/: BUILD.gn  bundle.json
low_power_player/include/: low_power_player_factory.h  lpp_sync_manager_adapter.h
low_power_player/src/: low_power_player_factory.cpp  lpp_component_driver.cpp  lpp_sync_manager_adapter.cpp
low_power_player/vdi/: lpp_component_vdi.h  lpp_log.h
power/: BUILD.gn  README.md  README_zh.md  bundle.json  power.gni
power/test/: BUILD.gn
power/utils/: power_xcollie.cpp
sensor/: BUILD.gn  README.md  README_zh.md  bundle.json  sensor.gni
sensor/hal/: BUILD.gn
sensor/hdi_impl/: BUILD.gn  callback_death_recipient.h  sensor_impl.cpp  sensor_impl.h
sensor/hdi_service/: BUILD.gn  callback_death_recipient.h  sensor_callback_vdi.cpp  sensor_callback_vdi.h  sensor_client_info.cpp  sensor_client_info.h  sensor_clients_manager.cpp  sensor_clients_manager.h  sensor_dump.cpp  sensor_dump.h  sensor_hdi_dump.cpp  sensor_hdi_dump.h  sensor_if_driver.cpp  sensor_if_service.cpp  sensor_if_service.h  sensor_impl.cpp  sensor_impl.h  sensor_interface_driver.cpp  sensor_interface_service.cpp
sensor/hdi_service_3.0/: BUILD.gn  callback_death_recipient.h  sensor_callback_vdi.cpp  sensor_callback_vdi.h  sensor_client_info.cpp  sensor_client_info.h  sensor_clients_manager.cpp  sensor_clients_manager.h  sensor_hdi_dump.cpp  sensor_hdi_dump.h  sensor_if_driver.cpp  sensor_if_service.cpp  sensor_if_service.h  代码告警
sensor/test/: BUILD.gn
serials/: BUILD.gn  bundle.json
serials/include/: serial_consts.h  serial_device.h  serial_device_callback.h  serial_device_manager.h  serial_hcb_util.h  serial_service.h  serial_uevent_handle.h  serial_uevent_queue.h
serials/src/: serial_device.cpp  serial_device_callback.cpp  serial_device_manager.cpp  serial_driver.cpp  serial_hcb_util.cpp  serial_service.cpp  serial_uevent_handle.cpp  serial_uevent_queue.cpp
serials/test/: BUILD.gn
usb/: BUILD.gn  README.md  README_zh.md  bundle.json  hisysevent.yaml  usb.gni
usb/cfg/: BUILD.gn  init.usb.configfs.cfg  usb.para.dac
usb/ddk/: BUILD.gn
usb/ddk_service/: BUILD.gn
usb/hdi_service/: BUILD.gn  usb_interface_service.map
usb/libusb_adapter/: BUILD.gn  libusb_adapter.map
usb/net/: BUILD.gn
usb/sample/: BUILD.gn
usb/serial/: BUILD.gn  serial.gni  serial_interface_service.map
usb/test/: BUILD.gn
vibrator/: BUILD.gn  README.md  README_zh.md  bundle.json  vibrator.gni
vibrator/hal/: BUILD.gn
vibrator/hdi_impl/: BUILD.gn  vibrator_interface_impl.cpp  vibrator_interface_impl.h
vibrator/hdi_service/: BUILD.gn  vibrator_if_driver.cpp  vibrator_if_service.cpp  vibrator_if_service.h  vibrator_interface_driver.cpp  vibrator_interface_impl.cpp  vibrator_interface_impl.h
vibrator/hdi_service_2.0/: BUILD.gn  vibrator_if_driver.cpp  vibrator_if_service.cpp  vibrator_if_service.h
vibrator/test/: BUILD.gn
wlan/: BUILD.gn  README.md  README_zh.md  bundle.json  wlan.gni
wlan/chip/: BUILD.gn
wlan/client/: BUILD.gn  libwifidriverclient.map  wifi_driver_client.map
wlan/hal/: BUILD.gn  libwifihal.map
wlan/hdi_service/: BUILD.gn  wlan_impl.c  (+4 more)
(+6289 files in other folders)
