# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

if (defined(ohos_lite)) {
  import("//build/lite/config/component/lite_component.gni")
} else {
  import("//build/ohos.gni")
}
import("//drivers/adapter/uhdf2/uhdf.gni")
import("//drivers/peripheral/audio/audio.gni")

group("hdi_audio") {
  deps = [ "hal/hdi_passthrough:hdi_audio" ]

  if (defined(ohos_lite)) {
    deps += [ "config/lite:hdf_audio_json" ]
  } else {
    deps += [
      "config/linux:hdf_audio_json",
      "hal/hdi_binder/proxy:audio_hdi_proxy_server",
      "hal/hdi_binder/server:audio_hdi_adapter_server",
    ]
  }

  if (enable_audio_device_mpi) {
    deps += [
      "//device/hisilicon/hardware/media/proprietary/hal/audio:hdi_audio_interface_lib_capture",
      "//device/hisilicon/hardware/media/proprietary/hal/audio:hdi_audio_interface_lib_mpi",
      "//device/hisilicon/hardware/media/proprietary/hal/audio:hdi_audio_interface_lib_render",
    ]
  } else {
    deps += [
      "supportlibs/adm_adapter:hdi_audio_interface_lib_capture",
      "supportlibs/adm_adapter:hdi_audio_interface_lib_render",
    ]
  }
  if (enable_audio_hal_notsupport_pathselect == false) {
    deps += [ "hal/pathselect:hdi_audio_path_select" ]

    if (defined(ohos_lite)) {
      deps += [ "config/lite:hdf_audio_path_json" ]
    } else {
      deps += [ "config/linux:hdf_audio_path_json" ]
    }
  }
}

group("audio_sample_client") {
  deps = [
    "sample:audio_sample_capture",
    "sample:audio_sample_render",
  ]
}
