# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("audio.gni")

group("hdi_audio") {
  deps = []

  if (defined(ohos_lite)) {
  } else {
    if (drivers_peripheral_audio_feature_hdf_proxy_stub == true) {
      deps += [ "hal/hdi_binder/server:hdi_audio_a2dp_server" ]
    }
    deps += [ "hdi_service:idl_audio" ]
  }
}

config("drivers_peripheral_audio_header") {
  include_dirs = [
    "interfaces/effect",
    "interfaces/sound",
  ]
}

ohos_static_library("libaudio_header_static") {
  public_configs = [ ":drivers_peripheral_audio_header" ]

  part_name = "drivers_peripheral_audio"
  subsystem_name = "hdf"
}