# Copyright (c) Huawei Technologies Co., Ltd. 2021. All rights reserved.
if (defined(ohos_lite)) {
  import("//build/lite/config/component/lite_component.gni")
  import("${ohos_product_adapter_dir}/audio/product.gni")
} else {
  import("//build/ohos.gni")
  if (product_name == "ohos-arm64") {
    enable_audio_hal_notsupport_pathselect = false
  }
}

declare_args() {
  drivers_peripheral_audio_feature_mono_to_stereo = false
  drivers_peripheral_audio_hal_notsupport_pathselect = false
  drivers_peripheral_audio_hdf_proxy_stub = true
  drivers_peripheral_audio_user_mode = false
  drivers_peripheral_audio_full_test_suite = false
  drivers_peripheral_audio_policy_config = true
  drivers_peripheral_audio_alsa_lib = false
  drivers_peripheral_audio_rich_device = false
}

if (product_name == "ohos-arm64") {
  drivers_peripheral_audio_hal_notsupport_pathselect = false
}

if (defined(ohos_lite)) {
  if (defined(enable_audio_hal_notsupport_pathselect) &&
      enable_audio_hal_notsupport_pathselect == true) {
    drivers_peripheral_audio_hal_notsupport_pathselect = true
  } else {
    drivers_peripheral_audio_hal_notsupport_pathselect = false
  }
  if (defined(enable_audio_policy_config) &&
      enable_audio_policy_config == true) {
    drivers_peripheral_audio_policy_config = true
  } else {
    drivers_peripheral_audio_policy_config = false
  }
  if (defined(enable_hdf_audio_full_test_suite)) {
    drivers_peripheral_audio_full_test_suite = true
  }
}

#If set flag is false, the printf log will be built; if set flag is true, the hdf log version will be built.
enable_audio_hal_hdf_log = true

# testcase build switch
#If flag is true, the ADM_SO version testcase will be built; if set flag is false, the other version will be built.
enable_audio_adm_passthrough = false

#If flag is true, the ADM_SERVICE version testcase will be built; if set flag is false, the other version will be built.
enable_audio_adm_service = true

#If all above flag is set to false, it will build failure.so forbid setting all above flag to false.
enable_coverage = false
