# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_prebuilt_etc("hdf_peripheral.cfg") {
  source = "hdf_peripheral.cfg"
  relative_install_dir = "init"
  install_images = [ chipset_base_dir ]
  subsystem_name = "hdf"
  part_name = "hdf_core"
}

ohos_prebuilt_etc("audio_hifi_watchdog.para") {
  source = "etc/audio_hifi_watchdog.para"
  subsystem_name = "hdf"
  part_name = "hdf_core"
  module_install_dir = "etc/param"
}

ohos_prebuilt_etc("audio_hifi_watchdog.para.dac") {
  source = "etc/audio_hifi_watchdog.para.dac"
  subsystem_name = "hdf"
  part_name = "hdf_core"
  module_install_dir = "etc/param"
}
