# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

if (!defined(global_parts_info) ||
    defined(global_parts_info.customization_config_policy)) {
  has_battery_config_policy_part = true
  cflags_cc = [ "-DHAS_BATTERY_CONFIG_POLICY_PART" ]
} else {
  has_battery_config_policy_part = false
}

if (!defined(global_parts_info) ||
    defined(global_parts_info.commonlibrary_c_utils)) {
  has_battery_c_utils_part = true
} else {
  has_battery_c_utils_part = false
}
