# Copyright (c) 2021 - 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("./camera.gni")
import("./usb_hal/camera_usb.gni")

if (defined(ohos_lite)) {
  group("camera_hal") {
    deps = [
      "hdi_service/v1_0:camera_host_service_1.0",
      "vdi_base/common/buffer_manager:camera_buffer_manager",
      "vdi_base/common/device_manager:camera_device_manager",
      "vdi_base/common/pipeline_core:camera_pipeline_core",
      "vdi_base/common/utils:camera_utils",
      "vdi_base/v4l2:camera_host_vdi_impl_1.0",
    ]
    deps += [ "${chipset_build_deps}" ]
  }
  group("camera_hal_unittest") {
    deps = []
  }
} else if (is_standard_system) {
  group("camera_hal") {
    if (target_cpu == "x86_64") {
      deps = []
    } else {
      if (drivers_peripheral_camera_feature_usb == true) {
        deps = [
          "${chipset_usb_build_deps}",
          "usb_hal/buffer_manager:camera_buffer_manager",
          "usb_hal/device_manager:camera_device_manager",
          "usb_hal/hdi_impl:camera_daemon",
          "usb_hal/pipeline_core:camera_pipeline_core",
          "usb_hal/utils:camera_utils",
        ]
      } else {
        deps = [
          "${chipset_build_deps}",
          "hdi_service/v1_0:camera_host_service_1.0",
          "vdi_base/common/buffer_manager:camera_buffer_manager",
          "vdi_base/common/device_manager:camera_device_manager",
          "vdi_base/common/pipeline_core:camera_pipeline_core",
          "vdi_base/common/utils:camera_utils",
          "vdi_base/v4l2:camera_host_vdi_impl_1.0",
        ]
      }
    }
  }
  group("camera_hal_unittest") {
    if (target_cpu == "x86_64") {
      deps = []
    } else {
      testonly = true
      if (drivers_peripheral_camera_feature_usb == true) {
        deps = [ "usb_hal/test/ut:camera_test_ut" ]
      } else {
        deps = [
          #benchmark test
          "test/benchmarktest:hdf_camera_benchmark_test",

          # acceptance unit test
          "test/at:camera_test_at",
          "vdi_base/common/device_manager/test:camera_hal_device_manager_unittest",

          # fuzz test
          "test/fuzztest:camera_hdi_fuzztest",

          # function unit test
          "test/ut:camera_test_ut",
        ]
      }
    }
  }
}
