# Copyright (c) 2021 - 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("./camera.gni")

if (defined(ohos_lite)) {
  group("camera_hal") {
    deps = [
      "hdi_service/v1_0:camera_host_service_1.0",
      "vdi_base/common/adapter/platform/v4l2/src/driver_adapter:peripheral_camera_v4l2_adapter",
      "vdi_base/common/buffer_manager:peripheral_camera_buffer_manager",
      "vdi_base/common/device_manager:peripheral_camera_device_manager",
      "vdi_base/common/metadata_manager:peripheral_camera_metadata_manager",
      "vdi_base/common/pipeline_core:peripheral_camera_pipeline_core",
      "vdi_base/common/utils:peripheral_camera_utils",
    ]
  }
  group("camera_hal_unittest") {
    deps = []
  }
} else if (is_standard_system) {
  group("camera_hal") {
    if (target_cpu == "x86_64" && !is_emulator) {
      deps = []
    } else {
      deps = [
        "hdi_service/v1_0:camera_host_service_1.0",
        "vdi_base/common/metadata_manager:camera_example_vendor_tag_impl",
        "vdi_base/common/utils:peripheral_camera_utils",
        "vdi_base/usb_camera:usb_camera_vdi_impl",
      ]
      if (drivers_peripheral_camera_feature_usb == false) {
        deps += [
          "vdi_base/common/adapter/platform/v4l2/src/driver_adapter:peripheral_camera_v4l2_adapter",
          "vdi_base/common/buffer_manager:peripheral_camera_buffer_manager",
          "vdi_base/common/device_manager:peripheral_camera_device_manager",
          "vdi_base/common/metadata_manager:peripheral_camera_metadata_manager",
          "vdi_base/common/pipeline_core:peripheral_camera_pipeline_core",
        ]
      }
    }
  }
  group("camera_hal_unittest") {
    if (target_cpu == "x86_64" && !is_emulator) {
      deps = []
    } else {
      testonly = true
      if (drivers_peripheral_camera_feature_usb == true) {
        deps = [ "test/ut/usb_camera:camera_usb_test_ut" ]
      } else {
        deps = [
          # acceptance unit test
          "test/hdi/metadata_test:camera_metadata_operator_ut",
          "test/hdi/v1_0:camera_test_at",

          # benchmark test
          "test/benchmarktest/v1_0:hdf_camera_benchmark_test",

          # v4l2 unit test
          "test/ut/v4l2:camera_test_v4l2_ut",

          # buffer manager unit test
          "test/ut/buffer_manager:camera_buffer_manager_ut",

          # usb camera unit test
          "test/ut/usb_camera:camera_usb_test_ut",
        ]
      }
    }
  }
}
