# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

if (defined(ohos_lite)) {
  import("//build/lite/config/component/lite_component.gni")
} else {
  import("//build/ohos.gni")
}

camera_path = "//drivers/peripheral/camera/vdi_base/common/"
current_path = "."
test_path = "//drivers/peripheral/camera/test"
hdf_core_path = "//drivers/hdf_core"
enable_camera_device_utest = false
enable_camera_coverage = false
camera_test_path = "//drivers/peripheral/camera/test/hdi/"
camera_common_path = "//drivers/peripheral/camera/test/common/"

use_hitrace = true

if (defined(ohos_lite)) {
  defines += [ "CAMERA_BUILT_ON_OHOS_LITE" ]
}

if (is_emulator) {
  defines = [ "V4L2_EMULATOR" ]
}

declare_args() {
  drivers_peripheral_camera_feature_usb = false
}

declare_args() {
  drivers_peripheral_camera_use_commom_usb_camera_host_config = false
}
