# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("buffer_vdi_config") {
  include_dirs = [ "./buffer/hdi_service/include" ]
}

config("composer_vdi_config") {
  include_dirs = [ "./composer/hdi_service/include" ]
}

ohos_static_library("display_buffer_vdi_config") {
  public_configs = [ ":buffer_vdi_config" ]
}

ohos_static_library("display_composer_vdi_config") {
  public_configs = [ ":composer_vdi_config" ]
}

if (defined(ohos_lite)) {
  group("display_entry") {
    deps = [ "hal:hdi_display" ]
  }
  group("display_test_entry") {
    testonly = true
    deps = [ "test:hdf_test_display" ]
  }
} else {
  group("display_entry") {
    deps = [
      "buffer:display_buffer_entry",
      "composer:display_composer_entry",
    ]
  }
  group("display_test_entry") {
    testonly = true
    deps = [
      "buffer/test:display_buffer_test",
      "composer/test:display_composer_test",
    ]
  }
}
