# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("./distributedaudio.gni")

if (defined(ohos_lite)) {
  group("distributed_audio_entry") {
    deps = []
  }
} else {
  group("distributed_audio_entry") {
    deps = [
      "./hdi_service/audio/v1_0:hdf_daudio_primary_service",
      "./hdi_service/audio_ext/v1_0:hdf_daudio_ext_service",
    ]
  }
}
