# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

distributedaudio_path = "//foundation/distributedhardware/distributed_audio"
distributedaudio_ext_path =
    "//foundation/distributedhardware/distributed_audio_ext"

hdf_interfaces_path = "//drivers/interface/distributed_audio"
hdf_service_path = "//drivers/peripheral/distributed_audio"
hdf_ser_aud_path = "${hdf_service_path}/hdi_service/audio/v1_0"
hdf_ser_aud_ext_path = "${hdf_service_path}/hdi_service/audio_ext/v1_0"
common_path = "${hdf_service_path}/common"

distributedaudio_fuzz_path = "distributed_audio/distributed_audio"
build_flags = [ "-Werror" ]

declare_args() {
  drivers_peripheral_distributed_audio_extension = false
}
