# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

input_driver_path = "//drivers/peripheral/input"

declare_args() {
  drivers_peripheral_input_feature_model = false
  drivers_peripheral_input_feature_udriver = false
  drivers_peripheral_input_feature_lite_support_test = false
  drivers_peripheral_input_feature_support_ddk = false
}
