# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("intelligent_voice.gni")

if (defined(ohos_lite)) {
  group("intell_voice_engine_entry") {
    deps = []
  }
  group("intell_voice_trigger_entry") {
    deps = []
  }
} else {
  group("intell_voice_engine_entry") {
    if (drivers_peripheral_intelligent_voice_engine_enable) {
      deps = [ "hdi_service/engine:hdi_intell_voice_engine_service" ]
    }
  }
  group("intell_voice_trigger_entry") {
    deps = [ "hdi_service/trigger:hdi_intell_voice_trigger_service" ]
  }
}
