# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_shared_library("liblow_power_player_factory_service_1.0") {
  include_dirs = [
    "include",
    "vdi",
  ]
  sources = [
    "src/low_power_player_factory.cpp",
    "src/lpp_sync_manager_adapter.cpp"
  ]

  external_deps = [
    "c_utils:utils",
    "hdf_core:libhdf_host",
    "hdf_core:libhdf_ipc_adapter",
    "hdf_core:libhdf_utils",
    "hdf_core:libhdi",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "ipc:ipc_single",
    "drivers_interface_lpplayer:liblow_power_player_proxy_1.0",
  ]

  innerapi_tags = [ "passthrough" ]
  install_images = [ chipset_base_dir ]
  subsystem_name = "hdf"
  part_name = "drivers_peripheral_lpplayer"
}

ohos_shared_library("liblpp_driver") {
  include_dirs = [
    "include",
  ]

  sources = [ "src/lpp_component_driver.cpp" ]

  if (is_standard_system) {
    external_deps = [
      "c_utils:utils",
      "hdf_core:libhdf_host",
      "hdf_core:libhdf_ipc_adapter",
      "hdf_core:libhdf_utils",
      "hdf_core:libhdi",
      "hilog:libhilog",
      "ipc:ipc_single",
      "drivers_interface_lpplayer:liblow_power_player_stub_1.0",
    ]
  } else {
    external_deps = [
      "hilog:libhilog",
      "ipc:ipc_single",
    ]
  }
  install_images = [ chipset_base_dir ]
  subsystem_name = "hdf"
  part_name = "drivers_peripheral_lpplayer"
  shlib_type = "hdi"
}

group("lpp_idl_service") {
  deps = [
    ":liblow_power_player_factory_service_1.0",
    ":liblpp_driver",
  ]
}