# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

declare_args() {
  drivers_peripheral_power_wakeup_cause_path = false
}

declare_args() {
  drivers_peripheral_power_suspend_with_tag = false
}

declare_args() {
  drivers_peripheral_power_enable_s4 = false
}

declare_args() {
  drivers_peripheral_power_faster_retry_of_sleep = false
}

declare_args() {
  drivers_peripheral_power_slower_retry_of_sleep = false
}

if (!defined(global_parts_info) ||
    defined(global_parts_info.commonlibrary_c_utils)) {
  has_power_c_utils_part = true
} else {
  has_power_c_utils_part = false
}

if (!defined(global_parts_info) ||
    defined(global_parts_info.customization_config_policy)) {
  has_power_config_policy_part = true
  cflags_cc = [ "-DHAS_POWER_CONFIG_POLICY_PART" ]
} else {
  has_power_config_policy_part = false
}

if (!defined(global_parts_info) ||
    defined(global_parts_info.hiviewdfx_hisysevent)) {
  has_power_hisysevent_part = true
  cflags_cc += [ "-DHAS_POWER_HISYSEVENT_PART" ]
} else {
  has_power_hisysevent_part = false
}
