# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("sensor.gni")

group("sensor_entry") {
  deps = []
  if (defined(ohos_lite)) {
    deps += [ "hal:hdi_sensor" ]
  } else {
    deps += [
      "hdi_service_3.0:hdi_sensor_service_3.0",
    ]
    if (drivers_peripheral_sensor_feature_community) {
      deps += [ "hdi_impl:libhdi_sensor_impl" ]
    }
  }
}
