# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_shared_library("libserials_service_1.0") {
  visibility = [ ":*" ]
  include_dirs = [ "include" ]
  sources = [
    "src/serial_device_callback.cpp",
    "src/serial_device_manager.cpp",
    "src/serial_service.cpp",
    "src/serial_device.cpp",
    "src/serial_hcb_util.cpp",
    "src/serial_uevent_handle.cpp",
    "src/serial_uevent_queue.cpp",
  ]
  defines = [ "LOG_DOMAIN=0xD002519" ]

  external_deps = [
    "c_utils:utils",
    "drivers_interface_serial:serials_idl_headers",
    "hdf_core:libhdf_host",
    "hdf_core:libhdf_utils",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "ipc:ipc_single",
  ]

  cflags_cc = [ "-fstack-protector-all" ]

  innerapi_tags = [ "passthrough" ]
  install_images = [ chipset_base_dir ]
  subsystem_name = "hdf"
  part_name = "drivers_peripheral_serial"
}

group("hdf_serials") {
  deps = [
    ":libserials_service_1.0"
  ]
}
