# Copyright (c) Huawei Technologies Co., Ltd. 2020-2020. All rights reserved.

import("//build/ohos.gni")
import("//drivers/adapter/uhdf2/uhdf.gni")

group("libusb_ddk") {
  deps = [
    "//drivers/peripheral/usb/ddk:libusb_core",
    "//drivers/peripheral/usb/gadget/function/acm:libusbfn_cdcacm",
    "//drivers/peripheral/usb/gadget/function/ecm:libusbfn_cdcecm",
    "//drivers/peripheral/usb/gadget/function/master:libusbfn_master",
    "//drivers/peripheral/usb/net:libusbhost_ecm",
    "//drivers/peripheral/usb/sample/device/linux:acm_read",
    "//drivers/peripheral/usb/sample/device/linux:acm_speed_read",
    "//drivers/peripheral/usb/sample/device/linux:acm_speed_write",
    "//drivers/peripheral/usb/sample/device/linux:acm_test",
    "//drivers/peripheral/usb/sample/device/linux:acm_write",
    "//drivers/peripheral/usb/sample/device/linux:prop_test",
    "//drivers/peripheral/usb/sample/host:libusb_pnp_sample_driver",
    "//drivers/peripheral/usb/sample/host:usbhost_ddk_test",
    "//drivers/peripheral/usb/sample/host:usbhost_nosdk_speed_test",
    "//drivers/peripheral/usb/sample/host:usbhost_pnp_test",
    "//drivers/peripheral/usb/sample/host:usbhost_sdkapi_speed_test",
    "//drivers/peripheral/usb/sample/host:usbhost_sdkraw_speed_test",
    "//drivers/peripheral/usb/serial:libusbhost_acm",
    "//drivers/peripheral/usb/serial:libusbhost_acm_rawapi",
  ]
}
