# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

if (device_name == "hispark_phoenix") {
  import("//vendor/${product_company}/${product_name}/product.gni")
  default_config_path = usb_default_config_path
} else {
  default_config_path =
      "//device/soc/$device_company/common/hal/usb/$device_name/include"
}
